[package]
name = "netlat"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]

[dependencies]
mio = "*"
time = "0.1"
byteorder = "*"
csv = "1.0.0-beta.5"
serde_derive = "*"
serde = "*"
clap = {version = "2.31", features = ["yaml"]}
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "*"
