[package]
name = "netlat"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]

[dependencies]
netbench = { path = "../netbench" }
nix = { git = "https://github.com/gz/nix.git" }
mio = "*"
byteorder = "*"
csv = "1"
serde = "*"
serde_derive = "*"
clap = { version = "2.31", features = ["yaml"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "*"
time = "*"