[package]
name = "rserver"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]

[dependencies]
socket2 = { version = "0.3.7", features = ["reuseport"] }
netbench = { path = "../netbench" }
nix = { git = "https://github.com/gz/nix.git", branch = "vma-fix" }
clap = {version = "2.31", features = ["yaml"]}
hwloc = "0.5.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "*"
csv = "1"
mio = "*"
byteorder = "*"
libc = "*"

